Fixed the alignment of info icon in create or edit fields

--- a/styles.css
+++ b/styles.css
@@ -1123,6 +1123,8 @@ label {
 
 .two-cols-info {
     grid-template-columns: auto auto;
+    justify-content: start;
+    column-gap: 5px;
 }
 
 .two-cols {
